2006-02-08	Richard van den Berg  <richard@vdberg.org>
	* Explicitly check for readdir64, by Virolainen Pablo <pablo@cs.tut.fi>
	* Added note about --disable-lfs in README

2006-01-30	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.11-rc3
	* Changed version to post-0.11-rc3

2006-01-29	Richard van den Berg  <richard@vdberg.org>
	* Fix layout of aide.conf.5 by Vincent Danen <vdanen@linsec.ca>
	* Cleanup --help output by Vincent Danen <vdanen@linsec.ca>
	* Add separators in --check output by Vincent Danen <vdanen@linsec.ca>
	* Add --disable-lfs option to configure

2006-01-22	Richard van den Berg  <richard@vdberg.org>
	* Allow report_url to change syslog facility
	* Only warn when DB_CHECKINODE and DB_CTIME are used together
	* Added GPG scripts by Vincent Danen <vdanen@linsec.ca>

2005-12-19	Richard van den Berg  <richard@vdberg.org>
	* Revert check_list_for_match to old behaviour (Marc Haber)
	* Documentation update (Marc Haber)

2005-12-12	Richard van den Berg  <richard@vdberg.org>
	* Log tree matching verbosely, patch by Virolainen Pablo <pablo@cs.tut.fi>

2005-11-15	Richard van den Berg  <richard@vdberg.org>
	* Applied 'allow removed files' patch by Virolainen Pablo <pablo@cs.tut.fi>

2005-11-13	Richard van den Berg  <richard@vdberg.org>
	* Applied fix to ANF by Virolainen Pablo <pablo@cs.tut.fi>

2005-11-07	Richard van den Berg  <richard@vdberg.org>
	* Applied 'allow new files' patch by Virolainen Pablo <pablo@cs.tut.fi>

2005-11-03	Richard van den Berg  <richard@vdberg.org>
	* Remove russian translations; they are out of date and there is no static version of gettext available
	* Do not stop parsing directory at unescaped .
	* Fix "make dist" and "make check"
	* Added gpg scripts to contrib
	* Released version 0.11-rc2
	* Changed version to post-0.11-rc2

2005-10-30	Richard van den Berg  <richard@vdberg.org>
	* Warn if 'I' and 'c' are used together

2005-10-28	Richard van den Berg  <richard@vdberg.org>
	* Ignore 'c' when 'I' is in effect